Launchpad automatic translations update.

--- a/po/stellarium-skycultures/cs.po
+++ b/po/stellarium-skycultures/cs.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: stellarium\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-01-08 19:02+0700\n"
-"PO-Revision-Date: 2013-01-18 21:55+0000\n"
-"Last-Translator: Zbyněk Schwarz <Unknown>\n"
+"PO-Revision-Date: 2013-01-26 11:30+0000\n"
+"Last-Translator: Alexander Wolf <Unknown>\n"
 "Language-Team: Czech <cs@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-01-19 04:50+0000\n"
-"X-Generator: Launchpad (build 16430)\n"
+"X-Launchpad-Export-Date: 2013-01-27 04:35+0000\n"
+"X-Generator: Launchpad (build 16451)\n"
 
 #: nebulae/default/ngc2000names.dat:112
 msgid "47 Tuc"
@@ -535,7 +535,7 @@ msgstr "Sloní chobot"
 #: nebulae/default/ngc2000names.dat:264 nebulae/default/ngc2000names.dat:265
 #: nebulae/default/ngc2000names.dat:266 nebulae/default/ngc2000names.dat:267
 msgid "Grus Quartet"
-msgstr ""
+msgstr "Kvartet galaxií v Jeřábovi"
 
 #: nebulae/default/ngc2000names.dat:268
 msgid "Heart nebula"
@@ -559,7 +559,7 @@ msgstr ""
 
 #: nebulae/default/ngc2000names.dat:273 nebulae/default/ngc2000names.dat:274
 msgid "Keenan's System"
-msgstr ""
+msgstr "Keenanův systém"
 
 #: nebulae/default/ngc2000names.dat:275
 msgid "Kidney Bean galaxy"
@@ -576,7 +576,7 @@ msgstr ""
 
 #: nebulae/default/ngc2000names.dat:280
 msgid "Miniature Spiral"
-msgstr ""
+msgstr "Spirálka"
 
 #: nebulae/default/ngc2000names.dat:281
 msgid "Mirach's Ghost"
