--- a/po/stellarium-skycultures/eu.po
+++ b/po/stellarium-skycultures/eu.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: stellarium\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-01-08 19:02+0700\n"
-"PO-Revision-Date: 2012-12-30 11:13+0000\n"
-"Last-Translator: Alexander Wolf <Unknown>\n"
+"PO-Revision-Date: 2013-01-26 15:13+0000\n"
+"Last-Translator: Asier Iturralde Sarasola <Unknown>\n"
 "Language-Team: Basque <eu@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-01-09 04:52+0000\n"
-"X-Generator: Launchpad (build 16412)\n"
+"X-Launchpad-Export-Date: 2013-01-27 04:35+0000\n"
+"X-Generator: Launchpad (build 16451)\n"
 
 #: nebulae/default/ngc2000names.dat:112
 msgid "47 Tuc"
@@ -31,7 +31,7 @@ msgstr "Barnard-en galaxia"
 
 #: nebulae/default/ngc2000names.dat:116
 msgid "Bear's Paw galaxy"
-msgstr ""
+msgstr "Artzaren atzaparra galaxia"
 
 #: nebulae/default/ngc2000names.dat:117
 msgid "Beehive cluster"
@@ -191,7 +191,7 @@ msgstr "Harea-erlojuaren nebulosa"
 
 #: nebulae/default/ngc2000names.dat:166
 msgid "Hubble's variable nebula"
-msgstr ""
+msgstr "Hubbleren nebulosa aldakorra"
 
 #: nebulae/default/ngc2000names.dat:167
 msgid "Jewel Box"
@@ -382,15 +382,15 @@ msgstr ""
 
 #: nebulae/default/ngc2000names.dat:226
 msgid "Cat's Paw nebula"
-msgstr ""
+msgstr "Katuaren atzaparra galaxia"
 
 #: nebulae/default/ngc2000names.dat:227
 msgid "War and Peace nebula"
-msgstr ""
+msgstr "Gerra eta pakea nebulosa"
 
 #: nebulae/default/ngc2000names.dat:228
 msgid "Little Ghost nebula"
-msgstr ""
+msgstr "Mamu txikia nebulosa"
 
 #: nebulae/default/ngc2000names.dat:229
 msgid "Little Gem nebula"
@@ -410,11 +410,11 @@ msgstr "Fornax B"
 
 #: nebulae/default/ngc2000names.dat:233
 msgid "de Mairan's nebula"
-msgstr ""
+msgstr "de Mairan-en nebulosa"
 
 #: nebulae/default/ngc2000names.dat:234
 msgid "Flame nebula"
-msgstr ""
+msgstr "Sugarra nebulosa"
 
 #: nebulae/default/ngc2000names.dat:235
 msgid "Satellite cluster"
@@ -422,19 +422,19 @@ msgstr ""
 
 #: nebulae/default/ngc2000names.dat:236
 msgid "Thor's Helmet"
-msgstr ""
+msgstr "Thor-en kaskoa"
 
 #: nebulae/default/ngc2000names.dat:237
 msgid "Caroline's cluster"
-msgstr ""
+msgstr "Caroline-ren kumulua"
 
 #: nebulae/default/ngc2000names.dat:238
 msgid "τ Canis Majoris cluster"
-msgstr ""
+msgstr "τ Canis Majoris kumulua"
 
 #: nebulae/default/ngc2000names.dat:239
 msgid "Pencil nebula"
-msgstr ""
+msgstr "Lapitza nebulosa"
 
 #: nebulae/default/ngc2000names.dat:240
 msgid "Supernova Factory"
@@ -442,7 +442,7 @@ msgstr ""
 
 #: nebulae/default/ngc2000names.dat:241
 msgid "Galaxy cluster"
-msgstr ""
+msgstr "Galaxia kumulua"
 
 #: nebulae/default/ngc2000names.dat:242
 msgid "Southern Pinwheel galaxy"
@@ -454,23 +454,23 @@ msgstr ""
 
 #: nebulae/default/ngc2000names.dat:244
 msgid "Atoms for Peace galaxy"
-msgstr ""
+msgstr "Atomoak bakearen alde galaxia"
 
 #: nebulae/default/ngc2000names.dat:245
 msgid "Grand Design galaxy"
-msgstr ""
+msgstr "Diseinu handia galaxia"
 
 #: nebulae/default/ngc2000names.dat:246
 msgid "Monkey Head nebula"
-msgstr ""
+msgstr "Tximino burua nebulosa"
 
 #: nebulae/default/ngc2000names.dat:247
 msgid "Lemon slice nebula"
-msgstr ""
+msgstr "Limoi atala nebulosa"
 
 #: nebulae/default/ngc2000names.dat:248
 msgid "Red spider nebula"
-msgstr ""
+msgstr "Armiarma gorria nebulosa"
 
 #: nebulae/default/ngc2000names.dat:249
 msgid "Retina nebula"
@@ -506,7 +506,7 @@ msgstr "Cetus A"
 
 #: nebulae/default/ngc2000names.dat:257
 msgid "Cleopatra's Eye"
-msgstr ""
+msgstr "Kleopatraren begia"
 
 #: nebulae/default/ngc2000names.dat:258
 msgid "Cooling Tower"
@@ -518,19 +518,19 @@ msgstr ""
 
 #: nebulae/default/ngc2000names.dat:260
 msgid "Sagittarius Star Cloud"
-msgstr ""
+msgstr "Sagittarius izar-lainoa"
 
 #: nebulae/default/ngc2000names.dat:261
 msgid "Dragon nebula"
-msgstr ""
+msgstr "Dragoia nebulosa"
 
 #: nebulae/default/ngc2000names.dat:262
 msgid "Dragonfly cluster"
-msgstr ""
+msgstr "Sorgin-orratza kumulua"
 
 #: nebulae/default/ngc2000names.dat:263
 msgid "Elephant Trunk"
-msgstr ""
+msgstr "Elefantearen tronpa"
 
 #: nebulae/default/ngc2000names.dat:264 nebulae/default/ngc2000names.dat:265
 #: nebulae/default/ngc2000names.dat:266 nebulae/default/ngc2000names.dat:267
@@ -539,15 +539,15 @@ msgstr "Grus laukotea"
 
 #: nebulae/default/ngc2000names.dat:268
 msgid "Heart nebula"
-msgstr ""
+msgstr "Bihotza nebulosa"
 
 #: nebulae/default/ngc2000names.dat:269
 msgid "Heart-Shaped cluster"
-msgstr ""
+msgstr "Bihotz itxurako kumulua"
 
 #: nebulae/default/ngc2000names.dat:270
 msgid "Herring galaxy"
-msgstr ""
+msgstr "Sardinzarra galaxia"
 
 #: nebulae/default/ngc2000names.dat:271
 msgid "Hole in a cluster"
@@ -572,7 +572,7 @@ msgstr ""
 
 #: nebulae/default/ngc2000names.dat:279
 msgid "McLeish's Object"
-msgstr ""
+msgstr "McLeish-en objektua"
 
 #: nebulae/default/ngc2000names.dat:280
 msgid "Miniature Spiral"
@@ -580,19 +580,19 @@ msgstr "Miniaturazko espirala"
 
 #: nebulae/default/ngc2000names.dat:281
 msgid "Mirach's Ghost"
-msgstr ""
+msgstr "Mirach-en mamua"
 
 #: nebulae/default/ngc2000names.dat:282
 msgid "Sailboat cluster"
-msgstr ""
+msgstr "Belaontzia kumulua"
 
 #: nebulae/default/ngc2000names.dat:283
 msgid "Seyfert's Sextet"
-msgstr ""
+msgstr "Seyfert-en seikotea"
 
 #: nebulae/default/ngc2000names.dat:284
 msgid "Soul nebula"
-msgstr ""
+msgstr "Arima nebulosa"
 
 #: nebulae/default/ngc2000names.dat:285
 msgid "Southern Integral Sign"
@@ -600,7 +600,7 @@ msgstr ""
 
 #: nebulae/default/ngc2000names.dat:286
 msgid "Starfish cluster"
-msgstr ""
+msgstr "Itsas izarra kumulua"
 
 #: nebulae/default/ngc2000names.dat:287
 msgid "Superwind-Galaxy"
@@ -608,7 +608,7 @@ msgstr ""
 
 #: nebulae/default/ngc2000names.dat:288
 msgid "Turtle planetary nebula"
-msgstr ""
+msgstr "Dortoka nebulosa planetarioa"
 
 #: skycultures/arabic/constellation_names.eng.fab:1
 msgid "The Shackled Woman"
@@ -2038,7 +2038,7 @@ msgstr "Danbor-makila"
 
 #: skycultures/chinese/constellation_names.eng.fab:79
 msgid "Bond"
-msgstr ""
+msgstr "Lotura"
 
 #: skycultures/chinese/constellation_names.eng.fab:80
 msgid "Woman's Bed"
