--- a/po/stellarium-skycultures/sv.po
+++ b/po/stellarium-skycultures/sv.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: stellarium\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-01-08 19:02+0700\n"
-"PO-Revision-Date: 2013-01-05 01:04+0000\n"
-"Last-Translator: Jonas Persson <jonas.persson@physics.org>\n"
+"PO-Revision-Date: 2013-01-26 13:29+0000\n"
+"Last-Translator: Alexander Wolf <Unknown>\n"
 "Language-Team: Swedish <tp-sv@listor.tp-sv.se>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-01-09 04:58+0000\n"
-"X-Generator: Launchpad (build 16412)\n"
+"X-Launchpad-Export-Date: 2013-01-27 04:35+0000\n"
+"X-Generator: Launchpad (build 16451)\n"
 
 #: nebulae/default/ngc2000names.dat:112
 msgid "47 Tuc"
@@ -354,27 +354,27 @@ msgstr ""
 
 #: nebulae/default/ngc2000names.dat:217
 msgid "η Car nebula"
-msgstr ""
+msgstr "η Car nebulosa"
 
 #: nebulae/default/ngc2000names.dat:218 nebulae/default/ngc2000names.dat:219
 msgid "γ Cas nebula"
-msgstr ""
+msgstr "γ Cas nebulosa"
 
 #: nebulae/default/ngc2000names.dat:220
 msgid "κ Cru cluster"
-msgstr ""
+msgstr "κ Cru stjärnhop"
 
 #: nebulae/default/ngc2000names.dat:221 nebulae/default/ngc2000names.dat:222
 msgid "λ Cen nebula"
-msgstr ""
+msgstr "λ Cen nebulosa"
 
 #: nebulae/default/ngc2000names.dat:223
 msgid "ω Cen cluster"
-msgstr ""
+msgstr "ω Cen stjärnhop"
 
 #: nebulae/default/ngc2000names.dat:224
 msgid "ρ Oph nebula"
-msgstr ""
+msgstr "ρ Oph nebulosa"
 
 #: nebulae/default/ngc2000names.dat:225
 msgid "Rim nebula"
