--- a/po/stellarium/ca.po
+++ b/po/stellarium/ca.po
@@ -11,14 +11,14 @@ msgstr ""
 "Project-Id-Version: ca\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-01-18 23:15+0700\n"
-"PO-Revision-Date: 2013-01-06 18:10+0000\n"
-"Last-Translator: Alexander Wolf <Unknown>\n"
+"PO-Revision-Date: 2013-01-26 15:20+0000\n"
+"Last-Translator: Daniel Alomar i Claramonte <daniel.adastra@gmail.com>\n"
 "Language-Team: Català <ca@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-01-19 04:41+0000\n"
-"X-Generator: Launchpad (build 16430)\n"
+"X-Launchpad-Export-Date: 2013-01-27 04:34+0000\n"
+"X-Generator: Launchpad (build 16451)\n"
 
 #: src/core/modules/GridLinesMgr.cpp:564 src/ui_viewDialog.h:1168
 msgid "Meridian"
@@ -220,7 +220,7 @@ msgstr "Magnitud aparent: <b>%1</b> (per extinció)"
 
 #: src/core/modules/StarWrapper.cpp:120
 msgid "double star"
-msgstr ""
+msgstr "estel doble"
 
 #: src/core/modules/StarWrapper.cpp:128 plugins/Quasars/src/Quasar.cpp:100
 #, qt-format
@@ -586,6 +586,8 @@ msgid ""
 "Below are listed only the actions with assigned keys. Further actions may be "
 "available via the \"%1\" button."
 msgstr ""
+"A continuació s'enumeren només les accions amb les tecles assignades. Altres "
+"accions poden estar disponibles a través de la  \"%1\"."
 
 #: src/gui/HelpDialog.cpp:245
 msgid ""
@@ -1258,12 +1260,12 @@ msgstr "asteroide"
 #. TRANSLATORS: Type of object
 #: src/translations.h:159
 msgid "moon"
-msgstr ""
+msgstr "lluna"
 
 #. TRANSLATORS: Type of object
 #: src/translations.h:161
 msgid "plutoid"
-msgstr ""
+msgstr "plutonià"
 
 #: src/translations.h:165
 msgid "Arabic"
@@ -1409,7 +1411,7 @@ msgstr "Ocultació de la Terra i Jupiter al 2048"
 #. TRANSLATORS: Name of script
 #: src/translations.h:228
 msgid "3 Transits and 2 Eclipses from Deimos 2027"
-msgstr ""
+msgstr "3 Trànsits i 2 Eclipsis de Deimos 2027"
 
 #. TRANSLATORS: Name of script
 #: src/translations.h:230
@@ -1507,6 +1509,7 @@ msgstr ""
 #: src/translations.h:257
 msgid "Phobos eclipsing the Sun as seen from Olympus Mons on Jan 10, 2068."
 msgstr ""
+"Fobos eclipsant al Sol vist des del Mont Olimp el 10 de gener del 2068"
 
 #: src/translations.h:258
 msgid ""
@@ -1514,6 +1517,9 @@ msgid ""
 "occultations of both on the same day are very rare. Here's one that takes "
 "place 1/23/2048. In real speed."
 msgstr ""
+"Les ocultacions de la Terra per Fobos són comuns, com ho són les de Júpiter. "
+"Però ocultacions de tots dos en el mateix dia són molt rares. Aquí n'hi ha "
+"un que succeirà a terme 1/23/2048. A la velocitat real."
 
 #: src/translations.h:259
 msgid ""
@@ -1524,6 +1530,12 @@ msgid ""
 "emerges from Mars it is still eclipsed and dimmed in Mars' shadow, only to "
 "light up later."
 msgstr ""
+"Fobos va per davant de Mart i transita el Sol, passa a través d'ell i "
+"després de manera retrograda de tornada cap al sol i només parcialment "
+"transita de nou (només es veu a l'hemisferi sud de Deimos), llavors Mart "
+"totalment eclipsa el sol mentre Fobos trànsits en la foscor entre Mart i "
+"Deimos. Quan  Fobos sorgeix de Mart encara està eclipsada i atenuat a "
+"l'ombra de Mart, sortint a la llum més tard."
 
 #: src/translations.h:260
 msgid ""
@@ -1534,32 +1546,38 @@ msgstr ""
 
 #: src/translations.h:261
 msgid "A tour of the western constellations."
-msgstr ""
+msgstr "Un tour per les constel·lacions occidentals"
 
 #: src/translations.h:262
 msgid "Look at the Sun from big planets of Solar System and Pluto."
-msgstr ""
+msgstr "Mirar al Sol des de els planetes gegants del Sistema Solar i Plutó"
 
 #: src/translations.h:263
 msgid ""
 "Best views of Earth from other Solar System bodies in the 21st Century."
 msgstr ""
+"Les millors vistes de la Terra des d'altres cossos del Sistema Solar en el "
+"segle 21."
 
 #: src/translations.h:264
 msgid "Transit of Venus as seen from Sydney Australia, 6th June 2012."
-msgstr ""
+msgstr "Trànsit de Venus vist des de Sydney, Australia el 6 de juny de 2012."
 
 #: src/translations.h:265
 msgid ""
 "A demonstration of the analemma - the path of the Sun across the sky during "
 "the year."
 msgstr ""
+"Una demostració del analema - el camí que fa el Sol creuant el cel durant "
+"l'any."
 
 #: src/translations.h:266
 msgid ""
 "Flash of the supernova observed by Tycho Brahe in 1572. The Supernovae "
 "plugin has to be enabled."
 msgstr ""
+"Flaix de la supernova observada per Tycho Brahe al 1572. El plugin "
+"Supernovae ha d'estar activat."
 
 #: src/translations.h:271
 msgid "Andorra"
@@ -2549,7 +2567,7 @@ msgstr "Afegeix 1 any sideral"
 
 #: src/translations.h:523
 msgid "Add 1 sidereal century"
-msgstr ""
+msgstr "Afegir un segle  sideral"
 
 #: src/translations.h:524
 msgid "Add 1 solar day"
@@ -2589,7 +2607,7 @@ msgstr "Afegir un any tropical mitjà"
 
 #: src/translations.h:533
 msgid "Add 1 mean tropical century"
-msgstr ""
+msgstr "Afegir 1 segle tropicà mitjà"
 
 #: src/translations.h:534
 msgid "Slow down the script execution rate"
@@ -2661,7 +2679,7 @@ msgstr "Resta 1 any sideral"
 
 #: src/translations.h:551
 msgid "Subtract 1 sidereal century"
-msgstr ""
+msgstr "Restar 1 segle  sideral"
 
 #: src/translations.h:552
 msgid "Subtract 1 solar day"
@@ -2701,7 +2719,7 @@ msgstr "Resta una any tropical mitjà"
 
 #: src/translations.h:561
 msgid "Subtract 1 mean tropical century"
-msgstr ""
+msgstr "Restar 1 segle tropicà mitjà"
 
 #. TRANSLATORS: Keyboard action group name
 #: src/translations.h:564
@@ -4519,7 +4537,7 @@ msgstr "Designador internacional"
 
 #: plugins/Satellites/src/Satellite.cpp:244
 msgid "artificial satellite"
-msgstr ""
+msgstr "Satèl·lit artificial"
 
 #. TRANSLATORS: Slant range: distance between the satellite and the observer
 #: plugins/Satellites/src/Satellite.cpp:254
@@ -6687,23 +6705,23 @@ msgstr "Actualitzar les dades dels exoplanetes des d'Internet"
 
 #: plugins/Exoplanets/src/ui_exoplanetsDialog.h:260
 msgid "Display mode for exoplanets"
-msgstr ""
+msgstr "Mode de visualització d'exoplanetes"
 
 #: plugins/Exoplanets/src/ui_exoplanetsDialog.h:262
 msgid "Plot all systems with exoplanets without labels"
-msgstr ""
+msgstr "Traçar tots els sistemes amb exoplanetes sense etiquetes"
 
 #: plugins/Exoplanets/src/ui_exoplanetsDialog.h:264
 msgid "Enable display of distribution for exoplanets"
-msgstr ""
+msgstr "Activar la visualització de la distribució d'exoplanetes"
 
 #: plugins/Exoplanets/src/ui_exoplanetsDialog.h:266
 msgid "Display exoplanets since their discovery"
-msgstr ""
+msgstr "Mostra exoplanetes des del seu descobriment"
 
 #: plugins/Exoplanets/src/ui_exoplanetsDialog.h:268
 msgid "Enable timeline discovery of exoplanets"
-msgstr ""
+msgstr "Habilitació de la  línia de temps de descobriment d'exoplanetes"
 
 #: plugins/Observability/src/Observability.cpp:66
 msgid "Observability analysis"
@@ -6961,13 +6979,15 @@ msgstr ""
 #: plugins/Observability/src/gui/ObservabilityDialog.cpp:152
 #: plugins/Observability/src/gui/ObservabilityDialog.cpp:232
 msgid "Horizon altitude:"
-msgstr ""
+msgstr "Altitud del horitzó:"
 
 #: plugins/Observability/src/gui/ObservabilityDialog.cpp:106
 msgid ""
 "Minimum observable altitude (due to mountains, buildings, or just a limited "
 "telescope mount)."
 msgstr ""
+"Altitud mínima observable (a causa de les muntanyes, edificis, o simplement "
+"un muntatge telescopi limitada)."
 
 #: plugins/Observability/src/gui/ObservabilityDialog.cpp:108
 msgid "Today ephemeris:"
@@ -7150,15 +7170,15 @@ msgstr "Mida de la lletra"
 
 #: plugins/Observability/src/ui_ObservabilityDialog.h:375
 msgid "Observing conditions"
-msgstr ""
+msgstr "Condicions d'observació"
 
 #: plugins/Observability/src/ui_ObservabilityDialog.h:376
 msgid "Horizon altitude: 0 deg."
-msgstr ""
+msgstr "Altitud d'horitzó: 0 deg."
 
 #: plugins/Observability/src/ui_ObservabilityDialog.h:377
 msgid "Sun altitude at twilight: 0 deg."
-msgstr ""
+msgstr "Altitud Solar al crepuscle: 0 deg."
 
 #~ msgid "Equatorial Grid"
 #~ msgstr "Quadrícula Equatorial"
