--- a/ChangeLog
+++ b/ChangeLog
@@ -8,6 +8,7 @@ Added:
 - Some transneptunian objects (LP: #899084, #1051205)
 - New geographical locations (LP: #1051803)
 - New textures for DSO
+- DeltaT and lunar acceleration computation (LP: #575621)
 
 Changed:
 - Improving the scripting engine (LP: #1059368)
